feat: session, title and frontend improvements
